--- a/login.css
+++ b/login.css
@@ -4,15 +4,20 @@
     width: 100%;
     height: 100px;
     float: right;
-    background-image: url(imagini/culori.jpg);
+    background-image: url(imagini/home.jfif);
 	padding-bottom:1px;
 	margin-bottom:3%;
 }
-
+label{
+  text-shadow: 3px 3px purple;
+  font-size:20;
+	color:white;
+}
 .container1 .flog
 {   
 	
     margin-left: 800px;
+	margin-top:-175;
 }
 .container1 .ilog
 {   
@@ -91,4 +96,9 @@
     font-weight: bold;
     box-shadow: 2px 2px black;
     background-color:lightblue;
+}
+.logo{
+width:500px;
+height:300px;
+margin-top:-100px;;
 }
