--- a/settings.css
+++ b/settings.css
@@ -1,53 +1,63 @@
 .setcont{
-	width:60%;
-	margin-left:20%;
-	background-color:azure;
+    
+	width:75%;
+	background-image: url(imagini/set55.png);
 	height:500px;
 	overflow-y:scroll;
 	overflow-x:hidden;
 	border-width:5px;  
     border-style:ridge;
-	border-color:blue;
-	
+    margin: auto;
+	background-repeat: no-repeat;
+	background-size: cover;
 	
 }
-
 .setcont::-webkit-scrollbar {
     display: none;
 }
 .setedit{
 	float:right;
-	margin-right:3%;
-	background-color:blue;
+	margin-right: 10%;
+	background-color:white;
 	width:100px;
-	height:50px;
-	border-radius:15px;
+	height:30px;
+	border-radius:5px;
 	text-align:center;
-	margin-top:-4%;
-	
-	
+	margin-top:-7%;
+    font-size: 15px;
+	color:black;	
+}
+.text{
+	margin-top:5px;
 }
 .setedit:hover{
 	cursor:hand;
-	background-color:#058fff;
-	color:blue;
-	text-decoration: underline;
-}
-.cpw{
-	background-color:blue;
-	margin-left:2%;
-	height:50px;
-	width:150px;
-	border-radius:10%;
-	margin-top:10%;
-	text-align:center;
+	box-shadow: 3px 3px cadetblue;
+	color:darkviolet;
+    border: 2px solid cadetblue;
 	
 }
+.cpw{
+    
+	background-color: white;
+    margin-right: 30px;
+	height:30px;
+	width:130px;
+	border-radius:5px;
+	text-align:center;
+    font-weight: bold;
+    float: right;
+    margin-top: 10px;
+	color:black
+
+}
+
 .cpw:hover{
+     box-shadow: 5px 5px cadetblue; 
+    border: 2px solid cadetblue;
 	cursor:hand;
-	background-color:#058fff;
-	color:blue;
-	text-decoration: underline;
+
+	
 }
 .setlabel{
 
@@ -59,91 +69,151 @@
 }
 
 .l1{
-	color:blue;
-	
-
+	color:cadetblue;
+    margin-left: 15px;
 }
-.lab{margin-top:2%;
-text-decoration:underline;
-outline:none;}
+.lab
+{
+    margin-top:2%;
+    text-decoration:underline;
+    outline:none;
+	margin-left:20px;
+}
 
 .setform{
-	background-color:azure;
+	background-image: url(imagini/new9.jpg);
 	width:100%;
 	height:100%;
 	margin-top:10%;
 	padding:10px;
 	text-align:center;
 	color:blue;
-	border: 5px solid #0e91e8;
+    border-radius: 20px;
 	
 }
 
 .confirm{
-	background-color:blue;
+	background-color:white;
 	margin-left:2%;
-	height:50px;
-	width:150px;
+	height:40px;
+	width:100px;
 	border-radius:10%;
 	text-align:center;
 	float:left;
 	outline:none;
 	cursor:hand;
-	
+    margin-top: 15px;
+	border: 2px solid white;
 }
 .cancel{
-	background-color:red;
+    margin-top: 15px;
+	background-color:white;
 	margin-right:2%;
-	height:50px;
-	width:150px;
+	height:40px;
+	width:100px;
 	border-radius:10%;
 	text-align:center;
 	float:right;
 	outline:none;
 	cursor:hand;
+    border: 2px solid white;
 	
+}
+.cancel:hover{
+
+    box-shadow: 2px 2px #27344b;
+    width: 110px;
+    border: 4px solid turquoise;
 }
 
 .setimp{
 	
-	margin-bottom:2%;
-	width:96%;
+margin-bottom:2%;
+	width:90%;
 	height:12%;
-	border-color:azure;
-}.setimp1{
+	box-shadow: 3px 3px skyblue;
+	margin-left:-1.5%;
+    border-radius: 10px;
+}
+
+.setimp1{
 	
 	margin-bottom:2%;
-	width:96%;
+	width:90%;
 	height:12%;
-	border-color:azure;
+	box-shadow: 3px 3px skyblue;
 	margin-left:-1.5%;
+    border-radius: 10px;
 }
 
 .userform{
-width:60%;
-margin-left:19%;
+    
+width:40%;
+margin-left:3.5%;
 height:45%;
-margin-top:7%;
+margin-top:2%;
 position:absolute;
 display:none;
+
 }
 .CancelSettings{
-	background-color:red;
-	margin-right:2%;
-	height:50px;
-	width:150px;
+	background-image: url(imagini/back.png);
+	margin-right:5%;
+	height:40px;
+	width:100px;
 	border-radius:10%;
 	text-align:center;
-	float:right;
+	margin-left: 30px;
 	outline:none;
 	cursor:hand;
-	margin-top:-50px;
+    margin-top: 40px;
+	
 		
 }
 .settingslink{
 	text-decoration:none;
 	color:black;
 }
-.cancel:hover, .CancelSettings:hover{background-color:#bf1004;}
 
-.confirm:hover{background-color:#058fff;}
+#change
+{
+    color: white;
+    margin: auto;
+}
+#ch
+{
+    margin: auto;
+    margin-top: 5px;
+    font-weight: bold;
+    color: darkblue;
+}
+
+
+.userform h1
+{
+    color: turquoise;
+    text-shadow: 2px 2px black;
+    font-weight: bold;
+}
+
+
+#lb2
+{
+    margin-top:-5px;
+    margin-bottom: 10px;
+    color: turquoise;
+    text-shadow: 2px 2px black;
+    font-weight: bold;
+    font-size: 20px;
+    
+}
+.CancelSettings:hover{
+    height: 50px;
+    box-shadow: 5px 5px cadetblue; 
+   
+}
+.confirm:hover{
+    box-shadow: 2px 2px #27344b;
+    width: 110px;
+      border: 4px solid turquoise;
+}
